--- a/index_socials.html
+++ b/index_socials.html
@@ -4,6 +4,6 @@
     </head>
     
     <body>   
-        <a href="default.asp"><img src="smiley.gif" style="width:42px;height:42px;"></a>
+        <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" style="width:42px;height:42px;"></a>
     </body>
 </html>
