--- a/index_socials.html
+++ b/index_socials.html
@@ -4,6 +4,8 @@
     </head>
     
     <body>   
-        <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" style="width:42px;height:42px;"></a>
+        <div>
+            <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" style="width:128px;height:128px;"></a>
+        </div>
     </body>
 </html>
