--- a/index_socials.html
+++ b/index_socials.html
@@ -1,11 +1,10 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <h1>Here's some of my socials!</h1>
     </head>
     
     <body>   
-        <div>
-            <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" style="width:128px;height:128px;"></a>
-        </div>
+        <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" margin: left; style="width:128px;height:128px;"></a>
     </body>
 </html>
