--- a/index_socials.html
+++ b/index_socials.html
@@ -5,6 +5,6 @@
     </head>
     
     <body>   
-        <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" margin: left; style="width:128px;height:128px;"></a>
+        <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" margin: left style="width:128px;height:128px;"></a>
     </body>
 </html>
