--- a/index_socials.html
+++ b/index_socials.html
@@ -5,6 +5,13 @@
     </head>
     
     <body>   
-        <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" margin: left style="width:128px;height:128px;"></a>
+  <div class = "row">
+    <div class = "column">    
+        <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" alt="YOUTUBE" style="width:128px;height:128px;"></a>
+    </div>
+      <div class = "column">
+        <a href="https://github.com/TheDumCoder/"><img src="github.png" alt="YOUTUBE" style="width:128px;height:128px;"></a>        
+      </div>        
+   </div>
     </body>
 </html>
