--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <body>
  <div class = "row">
     <div class = "column">    
-        <a href="https://thedumcoder.github.io/"><img src="buttons2.png" alt="YOUTUBE" style="width:128px;height:128px;"></a>
+        <a href="https://thedumcoder.github.io/"><img src="buttons2.png" alt="HOME" style="width:128px;height:128px;"></a>
     </div>
       <div class = "column">
-        <a href="https://thedumcoder.github.io/index_socials.html"><img src="buttons1.png" alt="YOUTUBE" style="width:128px;height:128px;"></a>        
+        <a href="https://thedumcoder.github.io/index_socials.html"><img src="buttons1.png" alt="SOCIALS" style="width:128px;height:128px;"></a>        
       </div>        
    </div>        
     </body>
