--- a/index_socials.html
+++ b/index_socials.html
@@ -10,7 +10,7 @@
         <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" alt="YOUTUBE" style="width:128px;height:128px;"></a>
     </div>
       <div class = "column">
-        <a href="https://github.com/TheDumCoder/"><img src="github.png" alt="YOUTUBE" style="width:128px;height:128px;"></a>        
+        <a href="https://github.com/TheDumCoder/"><img src="github.png" alt="GITHUB" style="width:128px;height:128px;"></a>        
       </div>        
    </div>
     </body>
