--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    
     <head>
         <link rel="stylesheet" href="styles.css">
           <h1>Introduction</h1>
@@ -11,11 +12,12 @@
     <body>
  <div class = "row">
     <div class = "column">    
-        <a href="https://thedumcoder.github.io/"><img src="buttons2.png" alt="HOME" style="width:128px;height:128px;"></a>
+        <a href="https://thedumcoder.github.io/"><img src="buttons2.png" alt="HOME" style="width:100%"></a>
     </div>
       <div class = "column">
-        <a href="https://thedumcoder.github.io/index_socials.html"><img src="buttons1.png" alt="SOCIALS" style="width:128px;height:128px;"></a>        
+        <a href="https://thedumcoder.github.io/index_socials.html"><img src="buttons1.png" alt="SOCIALS" style="width:100%"></a>        
       </div>        
    </div>        
     </body>
+
 </html>
