--- a/index_socials.html
+++ b/index_socials.html
@@ -7,10 +7,10 @@
     <body>   
   <div class = "row">
     <div class = "column">    
-        <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" alt="YOUTUBE" style="width:128px;height:128px;"></a>
+        <a href="https://www.youtube.com/@MrAlt-"><img src="youtube.png" alt="YOUTUBE" style="width:100%"></a>
     </div>
       <div class = "column">
-        <a href="https://github.com/TheDumCoder/"><img src="github.png" alt="GITHUB" style="width:128px;height:128px;"></a>        
+        <a href="https://github.com/TheDumCoder/"><img src="github.png" alt="GITHUB" style="width:100%"></a>        
       </div>        
    </div>
     </body>
