--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
           <div>My name is MrAlt(more commonly - The Stupid Rat),</div>
           <div>i'm a level designer but i also program stuff</div>
           <div>I usually use GMS:2 or visual studio to create stuff</div>
+          <div>if you want to check my socials, then here:</div>
 </head>
     
 <body>
- <div class = "row">
-    <div class = "column">    
-        <a href="https://thedumcoder.github.io/"><img src="buttons2.png" alt="HOME" style="width:128;height:64px;"></a>
-    </div>
-      
+ <div class = "row"> 
     <div class = "column">
         <a href="https://thedumcoder.github.io/index_socials.html"><img src="buttons1.png" alt="SOCIALS" style="width:128;height:64px;"></a>        
       </div>        
