--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
           <div>if you want to check my socials, then here:</div>
 </head>
     
-<body>
- <div class = "row"> 
-    <div class = "column">
+<body> 
+    <div>
         <a href="https://thedumcoder.github.io/index_socials.html"><img src="buttons1.png" alt="SOCIALS" style="width:128;height:64px;"></a>        
-      </div>        
-   </div>        
+    </div>               
 </body>
 
 </html>
